--- a/client-side/src/app/main/main.html
+++ b/client-side/src/app/main/main.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh;">
+<div layout="column" class="full-height">
   <mantl-navbar></mantl-navbar>
-  <md-content></md-content>
+  <md-content ui-view flex layout-padding></md-content>
 </div>
