--- a/client-side/src/app/components/navbar/navbar.html
+++ b/client-side/src/app/components/navbar/navbar.html
@@ -3,11 +3,15 @@
   <md-button>UAR-MAntl.io</md-button>
 
   <section flex layout="row" layout-align="left center">
-    <md-button href="#" class="md-raised">User List</md-button>
-    <md-button href="#" class="md-raised">Audit</md-button>
-    <md-button href="#" class="md-raised">Application Settings</md-button>
+    <md-button ng-repeat="link in vm.links"
+               ng-class="{active: link.state === vm.activeState}"
+               ui-sref="{{::link.state}}"
+               class="md-raised">
+      {{::link.text}}
+    </md-button>
   </section>
 
-  <md-button>Welcome, {{ vm.user.name }}.</md-button>
+  <md-button>Welcome, {{ vm.user.name }}</md-button>
+  <md-button ui-sref="login" class="md-raised">Log out</md-button>
 
 </md-toolbar>
