[Client] Add user-select directive. Add markup and styling for audit page. Add mock users data.

--- a/client-side/src/app/components/transfer-select/transfer-select.html
+++ b/client-side/src/app/components/transfer-select/transfer-select.html
@@ -1,6 +1,6 @@
 <md-input-container>
   <label>Template</label>
-  <md-select ng-model="userList.selectedTemplate">
+  <md-select ng-model="users.selectedTemplate">
     <md-option ng-repeat="template in vm.templates" value="{{::template.name}}">
       {{::template.name}}
     </md-option>
