[Client] Implement account switcher.

--- a/client-side/src/app/pages/login/login.html
+++ b/client-side/src/app/pages/login/login.html
@@ -10,7 +10,7 @@
         <label>Password</label>
         <input ng-model="login.credentials.password" type="password">
       </md-input-container>
-      <md-button ui-sref="main.user-list" class="md-raised">Log in</md-button>
+      <md-button ui-sref="main.users" class="md-raised">Log in</md-button>
     </div>
   </div>
   <div flex></div>
