--- a/client-side/src/app/pages/main/audit/audit.html
+++ b/client-side/src/app/pages/main/audit/audit.html
@@ -1,6 +1,6 @@
 <div layout="row" class="audit-wrapper">
   <div flex="25">
-    <mantl-user-select data="audit.usersData"></mantl-user-select>
+    <mantl-user-select selected="audit.selected"></mantl-user-select>
   </div>
   <div class="section-divider"></div>
   <div flex class="section padding-large">
@@ -19,7 +19,7 @@
       </tr>
       </thead>
       <tbody>
-      <tr ng-repeat="event in audit.usersData.selected.events | filter: audit.searchQuery">
+      <tr ng-repeat="event in audit.selected.events | filter: audit.searchQuery">
         <td>{{::event.datetime}}</td>
         <td>{{::event.application}}</td>
         <td>{{::event.action}}</td>
