[Client] Update Angular Material to 1.0.4 version.

--- a/client-side/src/app/components/user-select/user-select.html
+++ b/client-side/src/app/components/user-select/user-select.html
@@ -1,4 +1,4 @@
-<div layout-padding class="section padding-large">
+<div class="section padding-standard">
   <md-input-container class="search-query-wrapper">
     <label>Search user:</label>
     <input ng-model="vm.searchQuery" type="text">
