--- a/client-side/src/app/pages/login/login.html
+++ b/client-side/src/app/pages/login/login.html
@@ -1,4 +1,4 @@
-<md-content layout="column" layout-padding class="full-height">
+<md-content layout="column" class="full-height padding-standard">
   <div flex></div>
   <div layout="row" layout-align="center">
     <div class="login-form-wrapper">
