--- a/client-side/src/app/pages/main/main.html
+++ b/client-side/src/app/pages/main/main.html
@@ -1,4 +1,4 @@
 <div layout="column" class="full-height">
   <mantl-navbar></mantl-navbar>
-  <md-content ui-view flex layout-padding></md-content>
+  <md-content ui-view flex class="padding-standard"></md-content>
 </div>
