--- a/client-side/src/app/components/templates-select/templates-select.html
+++ b/client-side/src/app/components/templates-select/templates-select.html
@@ -8,7 +8,7 @@
     </md-option>
   </md-select>
 </md-input-container>
-<div layout="row">
+<div layout="row" class="mt">
   <div flex>
     <div ng-if="vm.selectedTemplate.possibleOptions">
       <label>{{::vm.possibleOptionsTitle}}</label>
