--- a/client-side/src/app/pages/main/_main.scss
+++ b/client-side/src/app/pages/main/_main.scss
@@ -44,35 +44,28 @@ md-list {
   border-top: 1px solid $color-gray;
 }
 
+md-input-container {
+  display: block;
+  margin: $offset-small 0 0 0;
+}
+
+md-card md-card-title {
+  padding: 0 0 $offset-standard 0;
+}
+
 .mt {
   margin-top: $offset-standard;
+}
+
+.padding-small {
+  padding: $offset-small;
+}
+
+.padding-standard {
+  padding: $offset-standard;
 }
 
 .loader-wrapper {
   text-align: center;
   padding: $offset-standard 0;
-}
-
-//datepicker issue temp fix
-.md-datepicker-calendar, .md-datepicker-input-mask-opaque {
-  background: rgb(255, 255, 255);
-}
-
-.md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator {
-  background: rgb(33, 150, 243);
-  color: rgb(255, 255, 255);
-  border-color: transparent;
-}
-
-.md-calendar-date-selection-indicator:hover {
-  background: rgb(224, 224, 224);
-}
-
-.md-calendar-day-header {
-  background: rgb(224, 224, 224);
-  color: rgba(0, 0, 0, 0.87);
-}
-
-.md-calendar-date-disabled, .md-calendar-month-label-disabled {
-  color: rgba(0, 0, 0, 0.26);
 }
