--- a/client-side/src/app/pages/main/_main.scss
+++ b/client-side/src/app/pages/main/_main.scss
@@ -27,6 +27,10 @@ md-list {
       transition: all .1s;
     }
 
+    button {
+      padding: 0 $offset-small !important;
+    }
+
     &.selected {
       &, & button:hover {
         background-color: $color-blue !important;
@@ -77,7 +81,7 @@ md-card md-card-title {
     background: none;
     background-image: linear-gradient(to right, $color-gray, $color-blue);
     .peg {
-      box-shadow: $color-light-green 5px 2px 15px 2px;
+      box-shadow: $color-blue 5px 2px 15px 2px;
     }
   }
 }
